# MixTokenizer

./: .gitignore  MANIFEST.in  README.md  config.yaml  pyproject.toml  setup.py  temp.py  tokenizer.py
.github/: copilot-instructions.md
MixTokenizer/: __init__.py  extra_config.json  mapping.py  tokenizer.py  tokenizer_train.py  utils.py
MixTokenizer/core/: cpp_core.cpp  decode.cpp  judge_core.cpp  mystring.cpp  segment_core.cpp  segment_core.pyx  str.cpp  str.pyx  utils.cpp
MixTokenizer/lang_map/: mapping.py  text_new_back.jsonl  vocab.json
data/: map_text.jsonl  text.jsonl  umap_map_text.jsonl
lang_map/: mapping.py
mix/: extra_config.json  mix_tokenizer_config.yaml  tokenizer.py
mix/lang_map/: mapping.json
mix/new_tokenizer/: vocab.json
mix_Rw3Q5g/: tokenizer.py
mix_Rw3Q5g/new_tokenizer/: vocab.json
scripts/: install_mix.py  rename.py  train.py  uninstall_mix.py
tests/: test_mix_tokenizer.py
