[project]
name = "MixTokenizer"
version = "0.1.0"
readme = "README.md"
requires-python = ">=3.10"
license = { text = "Apache-2.0" }
authors = [
    { name = "ShenYunzhi", email = "shenyunzhi@smail.nju.edu.cn" }
]
urls = { "Homepage" = "https://github.com/dgme-syz/MixTokenizer" }
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: Apache License 2.0",
    "Operating System :: OS Independent"
]

[build-system]
requires = ["setuptools>=61.0", "wheel", "Cython", "numpy"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
where = ["."]