[project]
name = "MixTokenizer"
version = "0.1.0"
readme = "README.md"
requires-python = ">=3.10"
license = { text = "MIT" }
authors = [
    { name = "ShenYunzhi", email = "shenyunzhi@smail.nju.edu.cn" }
]
urls = { "Homepage" = "https://github.com/dgme-syz/MixTokenizer" }
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent"
]

[build-system]
requires = ["setuptools>=61.0", "wheel", "Cython", "numpy"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
where = ["."]
