[project]
name = "MixTokenizer"
version = "0.1.0"
description = "Hybrid tokenizer supporting multi-language and private-use mapping"
readme = "README.md"
requires-python = ">=3.8"
license = { text = "MIT" }
authors = [
    { name = "ShenYunzhi", email = "shenyunzhi@smail.nju.edu.cn" }
]
urls = { "Homepage" = "https://github.com/dgme-syz/MixTokenizer" }
classifiers = [
    "Programming Language :: Python :: 3",
    "Programming Language :: Cython",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent"
]

dependencies = [
    "transformers",
    "numpy",
]

[build-system]
requires = [
    "setuptools>=61.0",
    "wheel",
    "numpy",
    "pybind11"
]
build-backend = "setuptools.build_meta"

[tool.setuptools]
include-package-data = true

[tool.setuptools.packages.find]
where = ["."]
include = ["MixTokenizer", "MixTokenizer.*"]

[project.optional-dependencies]
dev = [
    "pytest>=7.0",
]